데이터관리페이지-와인 진행중

--- a/wineshare/src/main/resources/templates/admin/dataList.html
+++ b/wineshare/src/main/resources/templates/admin/dataList.html
@@ -165,7 +165,11 @@
                             <tr>
                                 <td>${wine.id}</td>
                                 <td>${wine.wineType}</td>
-                                <td>${wine.wineName}</td>
+                                <td>
+                                    <a href="/wines/wine/${wine.id}">
+                                        ${wine.wineName}
+                                    </a>
+                                </td>
                                 <td>${wine.price}</td>
                                 <td>${wine.memberNickname}</td>
                             </tr>
