--- a/wineshare/src/main/resources/templates/wine/wineModify.html
+++ b/wineshare/src/main/resources/templates/wine/wineModify.html
@@ -10,7 +10,12 @@
 <!-- 사용자 css -->
 <th:block layout:fragment="css">
   <link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/wine-form.css}">
-
+  <style>
+    .wine_get_img {
+      height: 100px;
+      width: auto;
+    }
+  </style>
 </th:block>
 
 <th:block layout:fragment="script">
@@ -39,26 +44,7 @@
 
     });
   }
-  // 와인 타입 변경시 셀렉트바 토글
-  function toggleDevelopForm() {
-    const wineTypeSelect = document.getElementById("wineTypeSelect");
-    const developTanninSelector = document.getElementById("developTanninSelector");
-    const developFizzSelector = document.getElementById("developFizzSelector");
-    const developSweetnessSelector = document.getElementById("developSweetnessSelector");
 
-    if (wineTypeSelect.value === "RED") {
-      developTanninSelector.style.display = "block";
-      developFizzSelector.style.display = "none";
-    } else if (wineTypeSelect.value === "SPARKLING") {
-      developFizzSelector.style.display = "block";
-      developSweetnessSelector.style.display = "none";
-      developTanninSelector.style.display = "none";
-    } else {
-      developTanninSelector.style.display = "none";
-      developFizzSelector.style.display = "none";
-      developSweetnessSelector.style.display = "block";
-    }
-  }
 </script>
 </th:block>
 
@@ -82,7 +68,7 @@
     <h1 class="wine-form-title">Wine Register</h1>
 
     <!-- 타임리프를 사용한 와인 등록 폼 -->
-    <form th:action="@{/wines/modify}" method="post" class="wineForm" id="wineForm" th:object="${wineDTO}" enctype="multipart/form-data">
+    <form th:action="@{/wines/modify}" method="post" class="wineForm" id="wineForm" th:object="${wine}" enctype="multipart/form-data">
 
       <!-- 와인 이름 입력 -->
       <div class="form-group">
@@ -111,7 +97,7 @@
       <!-- 와인 종류 선택 -->
       <div class="form-group">
         <label th:for="wineType">Wine Type</label>
-        <select th:field="*{wineType}" id="wineTypeSelect" onchange="toggleDevelopForm()">
+        <select th:field="*{wineType}" id="wineTypeSelect">
           <option value="RED">RED</option>
           <option value="WHITE">WHITE</option>
           <option value="SPARKLING">SPARKLING</option>
@@ -124,22 +110,29 @@
       <!-- 이미지 첨부 -->
       <div class="form-group">
         <label th:for="wineImg">Wine Image</label>
-        <div th:if="${#strings.isEmpty(wineDTO.wineImg)}">
+        <div th:if="*{#strings.isEmpty(wineImg)}">
           <div class="form-img">
             <div class="custom-file img-div">
               <input type="file" class="custom-file-input" name="wineImgFile">
-              <label class="custom-file-label" th:text="와인이미지"></label>
+              <label class="custom-file-label" th:text="'와인 이미지를 등록해주세요.'"></label>
             </div>
           </div>
         </div>
 
-        <div th:if="${not #strings.isEmpty(wineDTO.wineImg)}">
+        <div th:if="*{not #strings.isEmpty(wineImg)}">
           <div class="form-img">
             <div class="custom-file img-div">
               <input type="file" class="custom-file-input" name="wineImgFile">
-              <input type="hidden" name="id" th:value="${wineDTO.id}">
+              <input type="hidden" th:field="*{id}">
               <label class="custom-file-label"
-                     th:text="와인 이미지를 동록해주세요."></label>
+                     th:text="*{getWineImgName()}"></label>
+              <!-- 현재이미지, 바꿨을땐 어떻게 떠야하지... -->
+<!--              <img th:src="${wine.wineImg == 'https://images.vivino.com/highlights/icon/most_user_rated.svg' ||-->
+<!--                                                    wine.wineImg == 'https://thumbs.vivino.com/avatars/ZlapMkM9QayY3ci79lSL7A_50x50.jpg' ||-->
+<!--                                                    wine.wineImg == 'https://images.vivino.com/highlights/icon/top_ranked.svg'-->
+<!--                                                    ? '/image/wineDefault.png' : wine.wineImg}" alt="image"-->
+<!--                   th:class="wine_get_img"-->
+<!--                   onerror="this.onerror=null; this.src='/image/wineDefault.png';">-->
             </div>
           </div>
         </div>
