--- a/wineshare/src/main/resources/templates/fragments/header.html
+++ b/wineshare/src/main/resources/templates/fragments/header.html
@@ -20,8 +20,8 @@
 <!--                <a href="about.html" title="">About Us</a>-->
                 <span class="mouse-pointer">About Us</span>
                 <ul class="sub-menu">
-                  <li><a href="About.html" title="">Wine Share</a></li>
-                  <li><a th:href="@{'boards/notice/list'}" title="notice">공지사항</a></li>
+                  <li><a th:href="@{'/about/aboutUs'}" title="">Wine Share</a></li>
+                  <li><a th:href="@{'/boards/notice/list'}" title="notice">공지사항</a></li>
                   <!--                                <li><a href="Coming-soon.html" title="">Bistro</a></li>-->
                   <!--                                <li><a href="404-page.html" title="">Promotion</a></li>-->
                   <!-- <li><a href="Wish-list.html" title="">Wish List</a></li>-->
