--- a/wineshare/src/main/resources/templates/member/memberForm.html
+++ b/wineshare/src/main/resources/templates/member/memberForm.html
@@ -192,7 +192,7 @@
 
             <div th:if="${memberDTO.id == null}">
                 <!-- 등록 버튼 -->
-                <button th:formaction="@{'members/new'}" type="submit" class="login-button">Register</button>
+                <button th:formaction="@{'/members/new'}" type="submit" class="login-button">Register</button>
                 <button type="reset" class="btn">reset<-여기 css</button>
 
             </div>
